--- a/config.ini
+++ b/config.ini
@@ -1,7 +1,7 @@
 [Sensor]
-MACAddress = 28:2C:02:41:C8:64
+MACAddress = AA:BB:CC:DD:EE:FF
 
 [ThingsBoard]
 Address = iot.mfsquare.ch
 Port = 1883
-Token = tXzcKxeudbkMz2hzLOZc
+Token = Accses_Token
